# fast-ai-gateway

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes_analyze.py  routes_chat.py  routes_health.py
app/core/: errors.py  http.py  logging.py  middleware.py
app/providers/: base.py  factory.py  ollama.py  openai.py
app/schemas/: analyze.py  chat.py  common.py  health.py
tests/: conftest.py  test_analyze_contract.py  test_chat_contract.py  test_health.py
